-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.8
-
None
-
e925d48d4 (dev), 8965df6a3 (6.8)
It seems that the automatic qmltypes generation is slow when the build folder contains a lot of files, for example when using qmlls on a qml file in the qt project.
The profiler claims that its due to qmlls taking lots of time finding out which files to watch for the automatic qmltypes generation:
This makes qmlls slow because that happens after each document update and before semantic highlighting or completions can be completed. I think this could be fixed by either making this concurrent (such that completions and highlighting can work while it searches for files to watch), or by making the filepaths in the qmltypes absolute (or at least relative) instead of them just containing filenames.
- resulted from
-
QTBUG-118705 qmlls: automatic qmltypes generation
-
- In Progress
-