tests/auto/qmlls/qqmlcodemodel/tst_qmlls_qqmlcodemodel.cpp
@@ -73,37 +73,46 @@ void tst_qmlls_qqmlcodemodel::findFilePathsFromFileNames_data()
 {
     QTest::addColumn<QStringList>("fileNames");
     QTest::addColumn<QStringList>("expectedPaths");
+    QTest::addColumn<QSet<QString>>("missingFiles");
 
     const QString folder = testFile("sourceFolder");
     const QString subfolder = testFile("sourceFolder/subSourceFolder/subsubSourceFolder");
+    const QSet<QString> noMissingFiles;
 
-    QTest::addRow("notExistingFile") << QStringList{ u"notExistingFile.h"_s } << QStringList{};
+    QTest::addRow("notExistingFile") << QStringList{ u"notExistingFile.h"_s } << QStringList{}
+                                     << QSet<QString>{ u"notExistingFile.h"_s };
 
     QTest::addRow("myqmlelement") << QStringList{ u"myqmlelement.h"_s }
                                   << QStringList{ folder + u"/myqmlelement.h"_s,
-                                                  subfolder + u"/myqmlelement.h"_s };
+                                                  subfolder + u"/myqmlelement.h"_s }
+                                  << noMissingFiles;
 
-    QTest::addRow("myqmlelement2") << QStringList{ u"myqmlelement2.hpp"_s }
-                                   << QStringList{ folder + u"/myqmlelement2.hpp"_s };
+    QTest::addRow("myqmlelement2")
+            << QStringList{ u"myqmlelement2.hpp"_s }
+            << QStringList{ folder + u"/myqmlelement2.hpp"_s } << noMissingFiles;
 
-    QTest::addRow("anotherqmlelement") << QStringList{ u"anotherqmlelement.cpp"_s }
-                                       << QStringList{ subfolder + u"/anotherqmlelement.cpp"_s };
+    QTest::addRow("anotherqmlelement")
+            << QStringList{ u"anotherqmlelement.cpp"_s }
+            << QStringList{ subfolder + u"/anotherqmlelement.cpp"_s } << noMissingFiles;
 }
 
 void tst_qmlls_qqmlcodemodel::findFilePathsFromFileNames()
 {
     QFETCH(QStringList, fileNames);
     QFETCH(QStringList, expectedPaths);
+    QFETCH(QSet<QString>, missingFiles);
 
     QmlLsp::QQmlCodeModel model;
     model.setRootUrls({ testFileUrl(u"sourceFolder"_s).toEncoded() });
 
     auto result = model.findFilePathsFromFileNames(fileNames);
+
     // the order only is required for the QCOMPARE
     std::sort(result.begin(), result.end());
     std::sort(expectedPaths.begin(), expectedPaths.end());
 
     QCOMPARE(result, expectedPaths);
+    QCOMPARE(model.ignoreForWatching(), missingFiles);
 }
 
 using namespace QQmlJS::Dom;
@@ -130,6 +139,13 @@ void tst_qmlls_qqmlcodemodel::fileNamesToWatch()
     // QSet("qqmlcomponentattached_p.h", "qqmlcomponent.h", "qobject.h", "qqmllist.h",
     // "helloworld.h", "qqmlengine_p.h")
     QVERIFY(fileNames.contains(u"helloworld.h"_s));
+
+    // test for no duplicates
+    QVERIFY(std::is_sorted(fileNames.begin(), fileNames.end()));
+    QVERIFY(std::adjacent_find(fileNames.begin(), fileNames.end()) == fileNames.end());
+
+    // should not contain any empty strings
+    QVERIFY(!fileNames.contains(QString()));
 }
 
 QString tst_qmlls_qqmlcodemodel::readFile(const QString &filename) const
